# asd2018_test

./: .travis.yml  DynamicArray.cpp  DynamicArray.h  README.md  binary_heap.cpp  compile_tests.sh  draw_result.sh  main  main.cpp  nano.save  run_tests.sh  saveMYCOR.cpp
Binary_heap/: Binary_heap.cpp  Binary_heap.h  initialization_test.sh  main  main.cpp  time_test.sh
Binomial_heap/: Binomial_heap.cpp  Binomial_heap.h  main  main.cpp
Cross_tests/: cross_test.sh  main  main.cpp
Dynamic_array/: Dynamic_array.cpp  Dynamic_array.h  main  main.cpp
Fibonacci_heap/: Fibonacci_heap.cpp  Fibonacci_heap.h  main  main.cpp  merge_test.sh  time_test.sh
Fibonicci_heap/: Fibonacci_heap.cpp  Fibonacci_heap.h  main  main.cpp  small_tests.sh
MYCOR/Binary_heap/: Binary_heap.cpp  Binary_heap.h  main.cpp
MYCOR/heap_clion/: CMakeLists.txt  time_test.sh
Stupid_solver/: main.cpp
compile_files/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main
docs/: docs.md
heap_clion/: Fibonacci_heap.cpp  Fibonacci_heap.h  main  main.cpp
main/: main.cpp
painter/: painter.py
painters/: load_test1_painter.py  load_test2_painter.py  load_test3_painter.py  load_test4_painter.py  load_test5_painter.py  stress_test1_painter.py  stress_test2_painter.py  stress_test3_painter.py  stress_test4_painter.py  stress_test5_painter.py
test_results/: load_test2_result.txt  load_test3_result.txt  stress_test2_result.txt  stress_test3_result.txt  stress_test5_result.txt
tests/load_tests/: run_tests.sh
tests/load_tests/test1/: CMakeLists.txt  compile_test.sh  description.md  load_test1_result.txt  main.cpp  run_test.sh  (+1 more)
tests/stress_tests/: CMakeLists.txt  run_tests.sh
tests/unit_tests/: compile_tests.sh  run_tests.sh
tests/unit_tests/compile_files/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  tests
(+42 files in other folders)
